<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageView
        android:id="@+id/tvMoviePoster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_feedback"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMovieYear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/year" />


            <TextView
                android:id="@+id/tvMovieGenre"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/genre" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvMovieRuntime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/runtime" />


            <TextView
                android:id="@+id/tvMovieImdbRating"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/imdb_rating" />

            <TextView
                android:id="@+id/tvMovieRating"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rating" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
