<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/movie_search"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp">
        </TextView>

        <ImageButton
            android:id="@+id/feedbackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/feed"
            android:background="@color/cardview_shadow_end_color"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp">

        </ImageButton>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etMovieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_movie_title"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"></ScrollView>

        <Button
            android:id="@+id/btnImdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imdb"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/movieDetailsContainer">
        <include
            android:id="@+id/movieDetailsLayout"
            layout="@layout/movie_details" />
    </LinearLayout>
</LinearLayout>
